# todoist_export

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  temp
src/todoist_export/: __init__.py  main.py  parse_config.py  paths.py  write_export.py
templates/: sptc.docx
