[tool.poetry]
name = "todoist-export"
version = "0.0.1"
description = ""
authors = ["Shay Hill <shay_public@hotmail.com>"]
readme = "README.md"
packages = [{include = "todoist_export", from = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
todoist-tree = "^0.1.1"


[tool.poetry.group.dev.dependencies]
commitizen = "^2.40.0"
pre-commit = "^3.0.4"

[tool.commitizen]
name = "cz_conventional_commits"
version = "0.0.1"
tag_format = "$version"
version_files = [
    "pyproject.toml:^version"
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pyright]
include = ["src"]
exclude = ["**/__pycache__.py"]

pythonVersion = "3.10"
pythonPlatform = "Any"

typeCheckingMode = "strict"
reportShadowedImports = true
reportCallInDefaultInitializer = true
reportImplicitStringConcatenation = true
# reportMissingSuperCall = true
reportPropertyTypeMismatch = true
reportUninitializedInstanceVariable = true
reportUnnecessaryTypeIgnoreComment = true
reportUnusedCallResult = true

venvPath = "C:\\Users\\shaya\\AppData\\Local\\pypoetry\\Cache\\virtualenvs"
venv = "C:\\Users\\shaya\\AppData\\Local\\pypoetry\\Cache\\virtualenvs\\todoist-export-mw4dKjKN-py3.11"
