[tool.poetry]
name = "todoist-export"
version = "0.2.3"
description = ""
authors = ["Shay Hill <shay_public@hotmail.com>"]
readme = "README.md"
packages = [{include = "todoist_export", from = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
todoist-tree = "^0.4.0"
pytest = "^7.2.1"
docx2python = "^2.5.0"
configparser = "^5.3.0"
openai = "^0.27.8"
paragraphs = "^0.2.0"


[tool.poetry.group.dev.dependencies]
commitizen = "^2.40.0"
pre-commit = "^2.15.0"
types-lxml = "^2022.11.8"

[tool.commitizen]
name = "cz_conventional_commits"
version = "0.2.3"
tag_format = "$version"
version_files = [
    "pyproject.toml:^version"
]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pyright]
include = ["src"]
exclude = ["**/__pycache__.py"]

pythonVersion = "3.10"
pythonPlatform = "Any"

typeCheckingMode = "strict"
reportShadowedImports = true
reportCallInDefaultInitializer = true
reportImplicitStringConcatenation = true
# reportMissingSuperCall = true
reportPropertyTypeMismatch = true
reportUninitializedInstanceVariable = true
reportUnnecessaryTypeIgnoreComment = true
reportUnusedCallResult = true

venvPath = "C:\\Users\\shaya\\AppData\\Local\\pypoetry\\Cache\\virtualenvs"
venv = "C:\\Users\\shaya\\AppData\\Local\\pypoetry\\Cache\\virtualenvs\\todoist-export-mw4dKjKN-py3.11"
